# ofs4.old

./: .gitignore  CMakeLists.txt
shaders/: triangle-demo.frag  triangle-demo.vert
src/: CMakeLists.txt
src/data/: data.cpp  data.h  gaia.cpp  gaia.h  hippacros.cpp  hippacros.h
src/engine/: object.cpp  object.h
src/main/: core.h  coreapp.h
src/main/sdl2/: coreapp.h  main.cpp
src/main/vulkan/: buffer.cpp  command.cpp  context.cpp  context.h  demo.cpp  image.cpp  pipeline.cpp  pipeline.h  render.cpp  sdl2.cpp  setup.cpp  shader.cpp  shader.h  swapchain.cpp  texture.cpp  texture.h
src/render/: scene.cpp  scene.h
src/render/pipelines/: demo.cpp  demo.h  star.cpp  star.h
src/tools/particles/: main.cpp
src/universe/: celobject.cpp  celobject.h  object.cpp  object.h  surface.cpp  surface.h  universe.h
src/utils/: fileio.cpp  fileio.h  sphere.cpp  sphere.h
